--- a/src/components/TeamModule.astro
+++ b/src/components/TeamModule.astro
@@ -19,7 +19,7 @@ const stats = [
       <Image
         src={StaffsImage}
         alt="banner"
-        class="aspect-square h-full max-h-[320px] w-full object-cover"
+        class="aspect-square h-full max-h-[320px] w-full object-cover md:max-h-[400px]"
       />
     </div>
     <div class="flex-1">
