--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,34 +26,40 @@ const currentYear = new Date().getFullYear();
     )}
   >
     <a href="/" class="w-fit rounded-full bg-white p-4">
-      <Image src={logo} alt="Logo" class="w-32 md:w-40" />
+      <Image src={logo} alt="Logo" class="w-32 md:w-40 lg:w-48" />
     </a>
-    <div class="mt-6 grid grid-cols-2 gap-8 gap-x-20 gap-y-2 md:mt-8 md:flex">
+    <div
+      class="mt-6 grid grid-cols-2 gap-8 gap-x-20 gap-y-2 md:mt-8 md:flex lg:mt-10"
+    >
       {
         links.map((link, index) => (
           <a
             href={link.href}
-            class="text font-semibold text-highlight hover:text-secondary"
+            class="text font-semibold text-highlight underline-offset-2 hover:text-secondary hover:underline"
           >
             {link.text}
           </a>
         ))
       }
     </div>
-    <div class="mt-8 flex flex-col items-center gap-3">
+    <div class="mt-8 flex flex-col items-center gap-3 lg:mt-10">
       <a
         href="mailto:RestoreLCT@gmail.com"
         class="group flex items-center gap-2 text-highlight"
       >
         <MailIcon className="size-5 text-highlight" />
-        <p class="ml-2 font-semibold text-highlight group-hover:text-secondary">
+        <p
+          class="ml-1 font-bold text-highlight underline-offset-2 group-hover:text-secondary group-hover:underline"
+        >
           RestoreLCT@gmail.com
         </p>
       </a>
       <a href="tel:+919655839776" class="group flex items-center gap-2">
         <PhoneIcon className="size-5 text-highlight" />
-        <p class="ml-2 font-semibold text-highlight group-hover:text-secondary">
-          +919655839776
+        <p
+          class="ml-1 font-bold text-highlight underline-offset-2 group-hover:text-secondary group-hover:underline"
+        >
+          +91 9655839776
         </p>
       </a>
     </div>
