--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,23 +7,25 @@ import { links } from "@/lib/constants";
 import BurgerMenu from "./BurgerMenu";
 ---
 
-<nav
-  class="container fixed left-0 right-0 top-0 z-50 flex h-[var(--header-height)] items-center justify-between bg-white py-3 shadow-md"
->
-  <a href="/" class="flex h-full items-center">
-    <Image src={logo} alt="Logo" class="h-full w-fit object-contain" />
-  </a>
-  <BurgerMenu client:only="react" />
-  <div class="hidden items-center gap-8 md:flex">
-    {
-      links.map((link) => (
-        <a href={link.href} class="text-sm text-text">
-          {link.text}
-        </a>
-      ))
-    }
-    <a href="/login" class={cn(buttonVariants({ variant: "accent" }))}
-      >Register Now</a
-    >
-  </div>
-</nav>
+<div class="fixed left-0 right-0 top-0 z-50 bg-white shadow-md">
+  <nav
+    class="container flex h-[var(--header-height)] items-center justify-between py-3 md:py-4"
+  >
+    <a href="/" class="flex h-full items-center">
+      <Image src={logo} alt="Logo" class="h-full w-fit object-contain" />
+    </a>
+    <BurgerMenu client:only="react" />
+    <div class="hidden items-center gap-8 md:flex">
+      {
+        links.map((link) => (
+          <a href={link.href} class="text-sm text-text">
+            {link.text}
+          </a>
+        ))
+      }
+      <a href="/login" class={cn(buttonVariants({ variant: "accent" }))}
+        >Register Now</a
+      >
+    </div>
+  </nav>
+</div>
