--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -97,6 +97,10 @@
     @media screen and (min-width: 1024px) {
       font-size: 3rem;
     }
+
+    .marker-underline::after {
+      bottom: 3px;
+    }
   }
 
   h2 {
@@ -139,7 +143,7 @@
     content: "";
     position: absolute;
     left: 0%;
-    bottom: 2px;
+    bottom: 1px;
     width: 100%;
     height: 14px;
     background: #cee0df;
