feat: optimize images

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -33,6 +33,8 @@ import Link from "./Link.astro";
         src={bannerImg}
         alt="banner"
         class="relative z-10 h-full w-full object-contain object-bottom pt-7"
+        width={520}
+        height={520}
       />
     </div>
   </div>
