--- a/src/components/StepsModule.astro
+++ b/src/components/StepsModule.astro
@@ -54,7 +54,13 @@ const steps = [
               "w-fit rounded-full bg-background-green",
             )}
           >
-            <Image src={step.icon} alt="icon" class={cn(step.iconSize)} />
+            <Image
+              src={step.icon}
+              alt="icon"
+              class={cn(step.iconSize)}
+              width={60}
+              height={60}
+            />
           </div>
           <h3 class="pt-7 text-primary-foreground">{`Step ${
             index + 1
