Revert "feat: optimize images"
This reverts commit eda841cbb0f39a98cfc3c5a761e3b8fa9a8c6717.

--- a/src/components/StepsModule.astro
+++ b/src/components/StepsModule.astro
@@ -54,13 +54,7 @@ const steps = [
               "w-fit rounded-full bg-background-green",
             )}
           >
-            <Image
-              src={step.icon}
-              alt="icon"
-              class={cn(step.iconSize)}
-              width={60}
-              height={60}
-            />
+            <Image src={step.icon} alt="icon" class={cn(step.iconSize)} />
           </div>
           <h3 class="pt-7 text-primary-foreground">{`Step ${
             index + 1
