--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,13 +14,7 @@ const { title, body, icon } = Astro.props;
 <div class="rounded-xl bg-background p-7 shadow-sm">
   <div class="flex flex-col gap-6">
     <div class="size-[72px] rounded-full bg-background-tertiary p-4">
-      <Image
-        src={icon}
-        alt="icon"
-        class="h-full w-full"
-        width={72}
-        height={72}
-      />
+      <Image src={icon} alt="icon" class="h-full w-full" />
     </div>
     <div class="flex-1">
       <h3 class="">
