feat: smooth scroll

--- a/src/components/CardModule.astro
+++ b/src/components/CardModule.astro
@@ -41,7 +41,10 @@ const cardData = [
 ];
 ---
 
-<div class="module-p bg-background-secondary">
+<div
+  class="module-p scroll-margin-p bg-background-secondary"
+  id="coaching-solutions"
+>
   <div class="container">
     <h2 class="text-center">
       Our Coaching <span class="marker-underline font-secondary text-primary"
