--- a/src/components/TeamModule.astro
+++ b/src/components/TeamModule.astro
@@ -13,7 +13,7 @@ const stats = [
 ---
 
 <div class="scroll-margin-m" id="team">
-  <div class="module-m containe">
+  <div class="module-m container">
     <div class="grid items-center gap-8 md:flex lg:gap-24 lg:px-20">
       <div class="relative flex-1 overflow-hidden rounded-3xl">
         <Image
