--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,7 @@ import { Image } from "astro:assets";
 import logo from "@/assets/restore.webp";
 import { links } from "@/lib/constants";
 import BurgerMenu from "./BurgerMenu";
+import RegisterDialog from "./RegisterDialog";
 ---
 
 <div class="fixed left-0 right-0 top-0 z-50 bg-white shadow-md">
@@ -23,9 +24,10 @@ import BurgerMenu from "./BurgerMenu";
           </a>
         ))
       }
-      <a href="/login" class={cn(buttonVariants({ variant: "accent" }))}
-        >Register Now</a
-      >
+      <RegisterDialog
+        client:only="react"
+        triggerClassname={cn(buttonVariants({ variant: "accent" }), "border-0")}
+      />
     </div>
   </nav>
 </div>
