--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "@/components/Footer.astro";
 import Header from "@/components/Header.astro";
 import "@/styles/globals.css";
 
@@ -35,5 +36,6 @@ const { title = "RLCT" } = Astro.props;
   <body>
     <Header />
     <slot />
+    <Footer />
   </body>
 </html>
