--- a/src/pages/curriculum.astro
+++ b/src/pages/curriculum.astro
@@ -1,5 +1,6 @@
 ---
 import MakeDifferenceModule from "@/components/MakeDifferenceModule.astro";
+import Testimonies from "@/components/Testimonies";
 import Layout from "@/layouts/Layout.astro";
 import {
   AppleIcon,
