fix: scroll issue

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,7 @@ const { title = "RLCT" } = Astro.props;
 
 <style>
   :global(html) {
-    scroll-behavior: smooth !important;
+    scroll-behavior: smooth;
   }
   @media (prefers-reduced-motion: reduce) {
     :global(html) {
