--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,7 +32,7 @@
     --chart-3: #274754;
     --chart-4: #e8c468;
     --chart-5: #f4a462;
-    --text: #7f858d;
+    --text: #63666a;
     --heading: #0b0a13;
     --highlight: #cee0df;
     --highlight-dark: #1d8882;
