--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,3 +60,21 @@ const optimizedImages = await Promise.all(
     <Testimonies client:only="react" />
   </div>
 </Layout>
+
+<script>
+  document.addEventListener("astro:page-load", () => {
+    const link = document.createElement("link");
+    link.rel = "stylesheet";
+    link.type = "text/css";
+    link.href =
+      "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css";
+    document.head.appendChild(link);
+
+    const link2 = document.createElement("link");
+    link2.rel = "stylesheet";
+    link2.type = "text/css";
+    link2.href =
+      "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css";
+    document.head.appendChild(link2);
+  });
+</script>
